# VaaniSync

./: .gitignore  CAPSTONE_README.md  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt  run_dubbing.bat  run_guide.md  working.md
.agents/skills/video-localizer/: SKILL.md
information/: workflow_graph.md
skill/: SKILL.md
tests/: test_pipeline.py
tests/eval/: eval_config.yaml  eval_dataset.json
video_localizer/: __init__.py  agent.py
video_localizer/agents/: translation.py
